# tenkei

./: .gitignore  .hindent.yaml  README.md  TestLibraryDefinition  build.hs  test_call.hs
_doc/: spec.md
benchmarks/trees/: TreeDefs  package.yaml  stack.yaml
c/: README  TestLibraryDefinition  a.c  compile.hs  ffi_wrappers.c  helpers.c  main.c  serializers.c  test_library_tenkei.c
c/app/: CMakeLists.txt  build  main.c  serializers.c  test_library_tenkei.c
c/common/: list_serializers.c  list_serializers.h  list_types.h
c/lib/: CMakeLists.txt  build  ffi_wrappers.c  test_library.c  test_library.h  test_library_tenkei.c
c/libtenkei-c/: ffi_wrappers.c  ffi_wrappers.h  serializers.c  serializers.h
cpp/app/: CMakeLists.txt  build  main.cpp  test_library_tenkei.cpp
cpp/lib/: CMakeLists.txt  build  test_library.cpp  test_library.h  test_library_tenkei.cpp
cpp/libtenkei-cpp/: CMakeLists.txt  ffi_wrappers.cpp  ffi_wrappers.h  serializers.cpp  serializers.h
haskell/: .gitignore  Rustlib.hs  Tenkei.hs  TypeDefs  package.yaml  package.yaml.in  stack.yaml  test_call.hs  test_library.hs
haskell/app/: Main.hs  TestLibrary.hs  build  package.yaml  stack.yaml
haskell/lib/: .gitignore  TestLibrary.hs  TestLibraryTenkei.hs  build  haskell_init.c  package.yaml.in
haskell/libtenkei-haskell/: .gitignore  ChangeLog.md  package.yaml
haskell/src/: TestLibrary.hs  TestLibraryDefinition  TestLibraryTenkei.hs
python/: .gitignore  a.c  ffi_wrappers.py  main.py  main_test.py  my_plugin.py  plugin.py  requirements.txt  test_library.py
rust/: Cargo.toml  build.rs
tenkei-build/: spec
tenkei-haskell/: package.yaml  stack.yaml
type-parser/: .gitignore  ChangeLog.md  README.md  TestDefs  package.yaml  stack.yaml  type-parser.cabal
type_parser/: HaskellTypes.hs  TestDefs  TypeDef.hs  Types.hs  type_def.hs
(+59 files in other folders)
